# Particle-Dynamics

./: CMakeLists.txt  Doxyfile  SLURMmdmPsingNP.slr  chronotest  chronotest.cpp  chronotestP.cpp  chronotestS.cpp  compute_cuda.cu  compute_cuda.h  compute_parallel.cpp  compute_parallel.h  compute_serial.cpp  compute_serial.h  graphs.py  init_testing.cpp  init_testing.h  kinetic_energy.txt  main  main.cpp  maincmd  maincmd.cpp  maincmdtests  maincmdtests.cpp  maincmdtestsmout.cpp  maincmdtestspreopt.cpp  md  mdSGPU  mdSGPU.cpp  mdSGPU.cu  mdint  mdmP  mdmP.cpp  mdmPNP  mdmPNP.cpp  mdmP_output.txt  mdmP_output_29017.txt  mdmP_output_29019.txt  mdmP_output_29021.txt  mdmP_output_29022.txt  mdmPsing  (+30 more)
4.txts/: KE_1.txt  KE_2.txt  KE_3.txt  KE_4.txt  KE_5.txt  KE_6.txt  P_2.txt  P_4.txt  P_5.txt  P_6.txt  particles.txt
Old Scripts/: main  maincmd.cpp  particles.txt
SLURM/: mdmPsingNP1.slr  mdmPsingNP16.slr  mdmPsingNP2.slr  mdmPsingNP32.slr  mdmPsingNP4.slr  mdmPsingNP48.slr  mdmPsingNP8.slr  mdmPsing_KE_1.txt  mdmPsing_KE_16.txt  mdmPsing_KE_2.txt  mdmPsing_KE_32.txt  mdmPsing_KE_4.txt  mdmPsing_KE_48.txt  mdmPsing_KE_8.txt  slurm-md-16t.txt  slurm-md-1t.txt  slurm-md-2t.txt  slurm-md-32t.txt  slurm-md-48t.txt  slurm-md-4t.txt  slurm-md-8t.txt
Time_Tests/: Simp  Simp.cpp  SimpO1  SimpO2  SimpO3  chronoP  chronotest  chronotestP.cpp
b/: CMakeCache.txt  Makefile  cmake_install.cmake  kinetic_energy.txt  md  mdpar  particles.txt
docs/html/: graph_legend.html  index.html
mdmPNP.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
mdmPNP.er/archives/: mdmPNP_plyGbeRLCK9
mdmPsingNP.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
mdmPsingNP.er/archives/: mdmPsingNP_plyGbeRLCK9
mdmS.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
mdmoutO0.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
mdmoutO0.er/archives/: mdmoutO0_plyGbeRLCK9
mdmoutO2.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
mdmoutO2.er/archives/: mdmoutO2_plyGbeRLCK9
mdmoutO3.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
mdmoutO3.er/archives/: mdmoutO3_plyGbeRLCK9
mtoutint.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
mtoutint2.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
mtoutint2.er/archives/: libboost_program_options.so.1.74.0_dnWuQRcLhw9
profile_run.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
profile_run.er/archives/: md_plyGbeRLCK9
profile_run1.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
profile_run1.er/archives/: md_plyGbeRLCK9
profile_run2.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
profile_run2.er/archives/: md_plyGbeRLCK9
profile_run2cur.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
profile_run2cur.er/archives/: md_plyGbeRLCK9
profile_run2prev.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
profile_run2prev.er/archives/: md_plyGbeRLCK9
profile_run80.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
profile_run80.er/archives/: md_plyGbeRLCK9
profile_runmin.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
profile_runmin.er/archives/: libblas.so.3.10.3_IiHvjNbM48a  md_plyGbeRLCK9
profile_runmout.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
profile_runmtout.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
profile_runmtout.er/archives/: mdmtout_plyGbeRLCK9
profile_runmtoutx.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
profile_runmtoutx.er/archives/: libatlas.so.3.10.3_dnWuQRcLhw9  mdmtout_plyGbeRLCK9
profile_runmtoutxint.er/: data.frameinfo  dyntext  log.xml  map.xml  overview  profile
profile_runmtoutxint.er/archives/: mdmtout_plyGbeRLCK9
test.1.er/: dyntext  log.xml  map.xml  overview
test.1.er/archives/: md_plyGbeRLCK9
